# realmate-senior-challenge

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.entrypoints/: celery-beat-entrypoint.sh  celery-worker-entrypoint.sh  django-entrypoint.sh
data/: imoveis.csv  imoveis_resumo.json  perguntas_frequentes.json
scripts/: example_ia.py
src/: manage.py
src/config/: celery.py  settings.py  urls.py
src/iamoveis/: admin.py  apps.py  ia_tools.py  models.py  serializers.py  tasks.py  views.py
src/iamoveis/management/commands/: importar_imoveis.py
src/iamoveis/migrations/: 0001_initial.py  0002_mensagem_message_id.py
src/iamoveis/services/: importar_imoveis.py
src/iamoveis/tests/: test_debounce.py  test_ia_tools.py  test_webhook.py
